Add support of category list #34
